# dify_jira

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.jira  Dockerfile.student  QAI+ (23).yml  README.md  dify_knowledge_ingestion.py  docker-compose.yaml  docker-compose.yml  example.py  jira_api.py  pyproject.toml  requirements.txt  setup-dify.sh  setup.sh  student_api.py  test-docker.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml
conference-docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
conference-docs/docs/: exercise-1-llm-configuration.md  exercise-2-knowledge-ingestion.md  exercise-3-ai-chatbot-setup.md  exercise-4-advanced-prompting.md  intro.md  troubleshooting.md
conference-docs/src/components/HomepageFeatures/: index.tsx  styles.module.css
conference-docs/src/css/: custom.css
conference-docs/src/pages/: index.module.css  index.tsx
config/: .env.example
data/dataset/: REST_JiraEcosystem_SUMMARY.json  TOC_JiraEcosystem_SUMMARY.json  VOTE_JiraEcosystem_issues.json  WEBHOOKS_JiraEcosystem_issues.json  full_quidditch_issues_atlassian_schema.json  full_quidditch_issues_enriched_with_tech_specs.json  full_quidditch_issues_extended.json
dataset/: TOC_JiraEcosystem_issues.json  VOTE_JiraEcosystem_SUMMARY.json
dify_jira_workshop_examples/: test_jira_issues.json
docs/: README.md
jira_rag/: dify_integration.py  jira_client.py
jira_rag/dataset/: REST_JiraEcosystem_issues.json  WEBHOOKS_JiraEcosystem_SUMMARY.json  extraction_summary.json  full_quidditch_jira_issues.json
scripts/: run_api.sh  start-services.sh  stop-services.sh  test-services.sh
src/api/: jira_api.py  student_api.py
src/core/jira_rag/: __init__.py  dify_integration.py  jira_client.py
src/core/models/: __init__.py  ingest_models.py
src/examples/: example.py
